--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.10",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
